[gd_scene load_steps=10 format=3 uid="uid://dqb3g4xt7qlum"]

[ext_resource type="PackedScene" uid="uid://c7i2wn723ofv4" path="res://characters_utility/vision_manager/vision_manager.tscn" id="1_5y7rg"]
[ext_resource type="Script" uid="uid://coros751u4u2l" path="res://example_scenes/npc_vision_example/npc_vision_example.gd" id="1_kggu6"]
[ext_resource type="Texture2D" uid="uid://c485t74cvfska" path="res://effects/textures/white_circle.png" id="1_li8pe"]
[ext_resource type="Texture2D" uid="uid://c6b5ihc5jnyoh" path="res://effects/textures/white_sq.png" id="3_go3c2"]

[sub_resource type="Animation" id="Animation_kggu6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_go3c2"]
resource_name = "move"
length = 6.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.4, 2.8, 3.4, 3.9, 4.4, 4.8, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 166), Vector2(0, 0), Vector2(477, -65), Vector2(398, -302), Vector2(71, -454), Vector2(78, -680), Vector2(-40, -644), Vector2(-76, -494), Vector2(-138, -335)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kggu6"]
_data = {
&"RESET": SubResource("Animation_kggu6"),
&"move": SubResource("Animation_go3c2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kggu6"]
size = Vector2(62, 64)

[sub_resource type="LabelSettings" id="LabelSettings_kggu6"]
font_size = 32

[node name="NPCVisionExample" type="Node2D"]
script = ExtResource("1_kggu6")

[node name="NPC" type="Node2D" parent="."]
position = Vector2(758, 354)

[node name="VisionManager" parent="NPC" instance=ExtResource("1_5y7rg")]
sight_arc = 80.0
front_direction = 1
debug_view = true

[node name="Sprite2D" type="Sprite2D" parent="NPC"]
texture = ExtResource("1_li8pe")

[node name="MovementBase" type="Node2D" parent="."]
position = Vector2(763, 803)

[node name="VisionTarget" type="Node2D" parent="MovementBase"]

[node name="Sprite2D" type="Sprite2D" parent="MovementBase/VisionTarget"]
texture = ExtResource("1_li8pe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MovementBase/VisionTarget"]
libraries = {
&"": SubResource("AnimationLibrary_kggu6")
}
autoplay = "move"
speed_scale = 0.5

[node name="Obstacles" type="Node2D" parent="."]

[node name="StaticBody2D2" type="StaticBody2D" parent="Obstacles"]
position = Vector2(946, 598)
scale = Vector2(3.6, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/StaticBody2D2"]
shape = SubResource("RectangleShape2D_kggu6")

[node name="Sprite2D" type="Sprite2D" parent="Obstacles/StaticBody2D2"]
self_modulate = Color(0, 0, 0, 1)
texture = ExtResource("3_go3c2")

[node name="StaticBody2D3" type="StaticBody2D" parent="Obstacles"]
position = Vector2(738, 301)
rotation = -1.14781
scale = Vector2(2.93759, 0.131885)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/StaticBody2D3"]
shape = SubResource("RectangleShape2D_kggu6")

[node name="Sprite2D" type="Sprite2D" parent="Obstacles/StaticBody2D3"]
self_modulate = Color(0, 0, 0, 1)
texture = ExtResource("3_go3c2")

[node name="Label" type="Label" parent="."]
offset_left = 846.0
offset_top = 541.0
offset_right = 1078.0
offset_bottom = 564.0
text = "static body blocks line of sight"

[node name="Label6" type="Label" parent="."]
offset_left = 514.0
offset_top = 683.0
offset_right = 746.0
offset_bottom = 758.0
text = "has line of sight
within sight arc
within max sight range"

[node name="Label2" type="Label" parent="."]
offset_left = 853.0
offset_top = 942.0
offset_right = 1085.0
offset_bottom = 965.0
text = "cant see outside max distance"

[node name="Label3" type="Label" parent="."]
offset_left = 772.0
offset_top = 273.0
offset_right = 1005.0
offset_bottom = 296.0
text = "always see within min distance"

[node name="Label5" type="Label" parent="."]
offset_left = 998.0
offset_top = 399.0
offset_right = 1237.0
offset_bottom = 422.0
text = "cant see outside sight arc"

[node name="Label4" type="Label" parent="."]
offset_left = 538.0
offset_top = 337.0
offset_right = 777.0
offset_bottom = 386.0
text = "unless line of sight
is blocked"

[node name="Label7" type="Label" parent="."]
offset_left = 33.0
offset_top = 51.0
offset_right = 376.0
offset_bottom = 144.0
text = "RED: Cant see target
GREEN: Can see target"
label_settings = SubResource("LabelSettings_kggu6")
